--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 						<!-- Me -->
 							<article id="me" class="panel headshot one">
 								<header>
+									<br>
 									<h1 class="animate bounce">Tiffany Hyatt</h1>
 									<p>Full Stack Web Developer | Music Afficionado</p>
-									<p id="p2">Check Out My <a href="https://github.com/trenette12">Github</a></p>
-									<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>
+									<p id="p2"><a href="mailto:barber.t12@gmail.com">Email Me Your Thoughts/Inquiries</a></p>
 								</header>
 								<a href="#work" class="pic">
 									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
