added gallery page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <!--Body Container-->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 center animated bounceInRight" id="maintwo">
+            <div class="col-12 col-md-8 col-sm-4 center animated bounceInRight" id="maintwo">
                 <img class="roundimg" src="images/Tiffany-Head-Shot.png" alt="Picture of Tiffany Hyatt" />
                 <p>Where did it all start?</p>
                 <div class="row">
