--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<h1>Tiffany Hyatt</h1>
 									<p>Full Stack Web Developer | Music Afficionado</p>
 									<p id="p2">Check Out My <a href="https://github.com/trenette12">Github</a></p>
-									<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>
+									<!--<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>-->
 								</header>
 								<a href="#work" class="pic">
 									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
@@ -160,6 +160,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/app.js"></script>
 			<script>
 				$('.headshot').on('click', function(){
 					$('.one').hide();
