updated nav bar and main2 css file

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main2.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://use.fontawesome.com/70db594f55.js"></script>
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
@@ -28,7 +29,20 @@
     <nav id="nav">
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
-                <span id="font-grad"><a href="./index.html">Home</a> | <a href="./about.html">About Me</a> | <a href="./connect.html">Connect With Me</a> | <a href="./portfolio.html">Gallery</a></span>
+                <ul>
+                    <li>
+                        <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </nav>
