--- a/index.html
+++ b/index.html
@@ -5,63 +5,86 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Tiffany Hyatt</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main2.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Wrapper-->
-			<div id="wrapper">
+<head>
+	<title>Tiffany Hyatt</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main2.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://use.fontawesome.com/70db594f55.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<nav class="navbar navbar-default navbar-static-top">
-							<div class="container">
-								<span id="font-grad"><a href="./index.html">Home</a> | <a href="./about.html">About Me</a> | <a href="./connect.html">Connect With Me</a> | <a href="./portfolio.html">Gallery</a></span>
-							</div>
-					</nav>
-					</nav>
-						<!--<a href="#me" class="icon fa-home active"><span>Home</span></a>
+<body>
+
+	<!-- Wrapper-->
+	<div id="wrapper">
+
+		<!-- Nav -->
+		<nav id="nav">
+			<nav class="navbar navbar-default navbar-static-top">
+				<div class="container">
+					<ul>
+						<li>
+							<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
+						</li>
+						<li>
+							<a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i></a>
+						</li>
+						<li>
+							<a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i></a>
+						</li>
+						<li>
+							<a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</nav>
+		<!--<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="#twitter" class="icon fa-twitter"><span>Twitter</span></a>-->
 
-				<!-- Main -->
-					<div id="main">
+		<!-- Main -->
+		<div id="main">
 
-						<!-- Me -->
-							<article id="me" class="panel headshot one">
-								<header>
-									<h1>Tiffany Hyatt</h1>
-									<p>Full Stack Web Developer | Music Afficionado</p>
-									<p id="p2">Check Out My <a href="https://github.com/trenette12">Github</a></p>
-									<!--<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>-->
-								</header>
-								<a href="#work" class="pic">
-									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
-									<img src="images/Tiffany-Head-Shot.png" alt="Picture of Tiffany Hyatt" />
-								</a>
-							</article>
-							<article class="two">
-								<header>
-									<br>
-									<h1 class="animate bounce">Tiffany Hyatt</h1>
-									<p>Full Stack Web Developer | Music Afficionado</p>
-									<p id="p2"><a href="mailto:barber.t12@gmail.com">Email Me Your Thoughts/Inquiries</a></p>
-								</header>
-							</article>
+			<!-- Me -->
+			<article id="me" class="panel headshot one">
+				<header>
+					<h1>Tiffany Hyatt</h1>
+					<p>Full Stack Web Developer | Music Afficionado</p>
+					<p id="p2">Latest Projects:<a href="https://github.com/trenette12">&nbsp;Github</a></p>
+					<p id="p3">Email: mail@tiffanyhyatt.com</p>
+					<div class="center" id="flip"><i class="fa fa-refresh" aria-hidden="true"></i></div>
+					<!--<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>-->
+				</header>
+				<a href="#work" class="pic">
+					<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
+					<img src="images/Tiffany-Head-Shot.png" alt="Picture of Tiffany Hyatt" />
+				</a>
+			</article>
+			<article class="two">
+				<header class="center">
+					<br>
+					<div class="center" id="flip"><i class="fa fa-refresh" aria-hidden="true"></i></div>
+					<p class="animate bounce">A dream doesn't become reality through magic; it takes sweat, determination and hard work.<br>
+					-&nbsp;<span class="right"><i>Colin Powell</i></span></p>
+					<p>Thanks for stopping by!</p>
+					<p id="p2"><a href="mailto:mail@tiffanyhyatt.com">Email Me Your Thoughts/Inquiries</a></p>
+				</header>
+			</article>
 
-						<!-- Work -->
-							<!--<article id="work" class="panel">
+			<!-- Work -->
+			<!--<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
 								</header>
@@ -112,64 +135,62 @@
 								</section>
 							</article>-->
 
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="6u 12u$(mobile)">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="6u$ 12u$(mobile)">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="12u$">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="12u$">
-												<textarea name="message" placeholder="Message" rows="8"></textarea>
-											</div>
-											<div class="12u$">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
-
+			<!-- Contact -->
+			<!--<article id="contact" class="panel">
+				<header>
+					<h2>Contact Me</h2>
+				</header>
+				<form action="#" method="post">
+					<div>
+						<div class="row">
+							<div class="6u 12u$(mobile)">
+								<input type="text" name="name" placeholder="Name" />
+							</div>
+							<div class="6u$ 12u$(mobile)">
+								<input type="text" name="email" placeholder="Email" />
+							</div>
+							<div class="12u$">
+								<input type="text" name="subject" placeholder="Subject" />
+							</div>
+							<div class="12u$">
+								<textarea name="message" placeholder="Message" rows="8"></textarea>
+							</div>
+							<div class="12u$">
+								<input type="submit" value="Send Message" />
+							</div>
+						</div>
 					</div>
-					<!--<div id="maintwo">
-						Two Half
-					</div>-->
-				<!-- Footer -->
-					<div id="footer">
-						<!--<ul class="copyright">
+				</form>
+			</article>-->
+
+		</div>
+		<!-- Footer -->
+		<div id="footer">
+			<!--<ul class="copyright">
 							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>-->
-					</div>
+		</div>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/skel-viewport.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/app.js"></script>
-			<script>
-				$('.headshot').on('click', function(){
-					$('.one').hide();
-					$('.two').show().addClass('animated rollIn');
-				})
-				$('.two').on("click", function(){
-					$('.two').hide();
-					$('.one').show().addClass('animated rollIn')
-				})
-			</script>
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/skel-viewport.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/app.js"></script>
+	<script>
+		$('.headshot #flip').on('click', function () {
+			$('.one').hide();
+			$('.two').show().addClass('animated rollIn');
+		})
+		$('.two #flip').on("click", function () {
+			$('.two').hide();
+			$('.one').show().addClass('animated rollIn')
+		})
+	</script>
+</body>
+
 </html>
