added another card

--- a/portfolio.html
+++ b/portfolio.html
@@ -228,13 +228,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 hidden">
+            <div class="col-md-6">
                 <div id="card4" class="card" style="width: 20rem;">
-                    <img class="card-img-top smallimg" src="./images/triviagame.png" alt="Card image cap">
+                    <img class="card-img-top smallimg" src="./images/rak.png" alt="Card image cap">
                     <div class="card-block">
-                        <h4 class="card-title">Action Game Trivia</h4>
-                        <p class="card-text">A timed fun trivia game with questions related to classic action movies.</p>
-                        <a href="https://trenette12.github.io/TriviaGame/" class="btn btn-primary">Go to site</a>
+                        <h4 class="card-title">Random Acts of Kindness</h4>
+                        <p class="card-text">An app that gives user the option to donate an amount of their choice to an organization at random.</p>
+                        <a href="https://random-acts/herokuapp.com" class="btn btn-primary">Go to site</a>
                     </div>
                 </div>
             </div>
