added new profile pic

--- a/contactme.html
+++ b/contactme.html
@@ -30,17 +30,17 @@
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <ul>
-                    <li>
+                    <li class="padding">
                         <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
                     </li>
-                    <li>
-                        <a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+                    <li class="padding">
+                        <a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -49,36 +49,37 @@
     <br>
     <!--Body Container-->
     <div class="container">
-                <div class="row">
+        <div class="row">
             <div class="col-md-12">
-        			<article id="contact" class="panel">
-				<header>
-					<h2>Contact Me</h2>
-				</header>
-				<form action="mailto:mail@tiffanyhyatt.com" method="post" enctype="text/plain">
-					<div>
-						<div class="row">
-							<div class="6u 12u$(mobile)">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="6u$ 12u$(mobile)">
-								<input type="text" name="email" placeholder="Email" />
-							</div>
-							<div class="12u$">
-								<input type="text" name="subject" placeholder="Subject" />
-							</div>
-							<div class="12u$">
-								<textarea name="message" placeholder="Message" rows="8"></textarea>
-							</div>
-							<div class="12u$">
-								<input type="submit" value="Send Message" />
-							</div>
-						</div>
-					</div>
-				</form>
-			</article>
-            </div></div>
+                <article id="contact" class="panel">
+                    <header>
+                        <h2>I'd Love to Hear From You</h2>
+                    </header>
+                    <form action="mailto:mail@tiffanyhyatt.com" method="post" enctype="text/plain">
+                        <div>
+                            <div class="row">
+                                <div class="6u 12u$(mobile)">
+                                    <input type="text" name="name" placeholder="Name" />
+                                </div>
+                                <div class="6u$ 12u$(mobile)">
+                                    <input type="text" name="email" placeholder="Email" />
+                                </div>
+                                <div class="12u$">
+                                    <input type="text" name="subject" placeholder="Subject" />
+                                </div>
+                                <div class="12u$">
+                                    <textarea name="message" placeholder="Message" rows="8"></textarea>
+                                </div>
+                                <div class="12u$">
+                                    <input type="submit" value="Send Message" />
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </article>
             </div>
+        </div>
+    </div>
 </body>
 
 </html>
