--- a/portfolio.html
+++ b/portfolio.html
@@ -27,26 +27,27 @@
 <body>
 
     <!-- Nav -->
-        <nav id="nav">
+    <nav id="nav">
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <ul>
-                    <li>
+                    <li class="padding">
                         <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
                     </li>
-                    <li>
-                        <a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+                    <li class="padding">
+                        <a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </nav>
+    <br>
     <!--Body Container-->
     <div class="container">
         <div class="row">
@@ -240,12 +241,12 @@
             </div>
         </div>
     </div>
-    	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/skel-viewport.min.js"></script>
-	<script src="assets/js/util.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/skel-viewport.min.js"></script>
+    <script src="assets/js/util.js"></script>
     <script>
-        $(".bootstrap").on("click", function(){
+        $(".bootstrap").on("click", function () {
             // $("#maintwo").addClass("hidden");
             $("#card1").show().removeClass("hidden");
         })
