--- a/about.html
+++ b/about.html
@@ -26,21 +26,21 @@
 <body>
 
     <!-- Nav -->
-        <nav id="nav">
+    <nav id="nav">
         <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <ul>
-                    <li>
+                    <li class="padding">
                         <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
                     </li>
-                    <li>
+                    <li class="padding">
                         <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
                     </li>
-                    <li>
-                        <a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+                    <li class="padding">
+                        <a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -50,34 +50,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-8 col-sm-4 center animated bounceInRight" id="maintwo">
-                <img class="roundimg" src="images/Tiffany-Head-Shot.png" alt="Picture of Tiffany Hyatt" />
+                <img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
                 <p>Where did it all start?</p>
-                <div class="row">
-                    <div class="col-md-2 leftalign">
-                        <p class="p2">2004</p>
-                    </div>
-                    <div class="col-md-8">
-                        <p> The Era of MySpace<br>Admittedly during this year, I became fascinated with the option to add multimedia
-                            to my then MySpace page. I thought it was kind of magical that inserting one piece of code could
-                            translate into an element that was customized by me. The manipulation of content, images, videos,
-                            audio was intriguing to me so much so that I mentioned my interest to my best friend and she
-                            asked me "Why don't you study for that in college"? This conversation along with other members
-                            of my family inspired me to begin a journey of studying and experimenting with Web Development.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-md-2 leftalign">
-                        <p class="p2">2014</p>
-                    </div>
-                    <div class="col-md-8">
-                        <p>Class of 2014!</br>During various trials and road bumps along the way, I finally received my Bachelor
-                            of Science degree in Digital Media and Web Technology. Later that year, I was granted an internship
-                            at a non-profit organization as a Web Content Specialist and have been keeping up to date with
-                            web technologies and growing in this field ever since. There's no looking back!</p>
-                    </div>
-                </div>
-                <hr>
                 <div class="row">
                     <div class="col-md-2 leftalign">
                         <p class="p2">2017</p>
@@ -95,6 +69,33 @@
                     </div>
                 </div>
                 <hr>
+                <div class="row">
+                    <div class="col-md-2 leftalign">
+                        <p class="p2">2014</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Class of 2014!</br>During various trials and road bumps along the way, I received my Bachelor
+                            of Science degree in Digital Media and Web Technology. Later that year, I was granted an internship
+                            at a non-profit organization as a Web Content Specialist and have been keeping up to date with
+                            web technologies and growing in this field ever since. There's no looking back!</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-md-2 leftalign">
+                        <p class="p2">2004</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p> The Era of MySpace<br>Admittedly during this year, I became fascinated with the option to add multimedia
+                            to my then MySpace page. I thought it was kind of magical that inserting one piece of code could
+                            translate into an element that was customized by me. The manipulation of content, images, videos,
+                            audio was intriguing to me so much so that I mentioned my interest to my best friend and she
+                            asked me "Why don't you study for that in college"? This conversation along with other members
+                            of my family inspired me to begin a journey of studying and experimenting with Web Development.</p>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
