--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
 	<div id="wrapper">
 
 		<!-- Nav -->
-    <nav id="nav">
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <ul>
-                    <li class="padding">
-                        <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </nav>
+		<nav id="nav">
+			<nav class="navbar navbar-default navbar-static-top">
+				<div class="container">
+					<ul>
+						<li class="padding">
+							<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
+						</li>
+						<li class="padding">
+							<a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
+						</li>
+						<li class="padding">
+							<a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
+						</li>
+						<li class="padding">
+							<a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</nav>
 		<!--<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
@@ -69,15 +69,15 @@
 				</header>
 				<a href="#work" class="pic">
 					<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
-					<img src="images/Tiffany-Head-Shot.png" alt="Picture of Tiffany Hyatt" />
+					<img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
 				</a>
 			</article>
 			<article class="two">
 				<header class="center">
 					<br>
 					<div class="center" id="flip"><i class="fa fa-refresh" aria-hidden="true"></i></div>
-					<p class="animate bounce">A dream doesn't become reality through magic; it takes sweat, determination and hard work.<br>
-					-&nbsp;<span class="right"><i>Colin Powell</i></span></p>
+					<p class="animate bounce">A dream doesn't become reality through magic; it takes sweat, determination and hard work.<br> -&nbsp;
+						<span class="right"><i>Colin Powell</i></span></p>
 					<p>Thanks for stopping by!</p>
 					<p id="p2"><a href="mailto:mail@tiffanyhyatt.com">Email Me Your Thoughts/Inquiries</a></p>
 				</header>
