made website responsive

--- a/about.html
+++ b/about.html
@@ -49,8 +49,49 @@
     <!--Body Container-->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-8 col-sm-4 center animated bounceInRight" id="maintwo">
-                <img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+            <div class="col-md-12 center animated bounceInRight" id="maintwo">
+                <h2>About Me</h2><br>
+                <div class="row">
+                    <div class="col-md-8">
+                        I’m a dreamer with an unshakeable determination to accomplish every goal I set for myself, while being cognizant that the
+                        reason challenges exist along the way is because a transformation is vital for progression. Given
+                        this mindset, no position is too difficult, no language too hard to learn and no atmosphere unadaptable
+                        because I’m self-aware, humble and know a little something about relentless hard work and giving
+                        it your all when no one’s watching.
+                    </div>
+                    <div class="col-md-4">
+                        <img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+                    </div>
+                </div><br>
+            </div>
+            <div class="col-md-12 center animated bounceInLeft" id="maintwo">
+                <h3>Where Did It All Start?</h3><br>
+                <div class="row">
+                    <div class="col-md-2 leftalign">
+                        <p class="p2">2017</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Enrolled in George Washington Full Stack Web Development.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 leftalign">
+                        <p class="p2">2014</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Graduated with a Bachelor of Science in Digital Media and Web Technology.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 leftalign">
+                        <p class="p2">2013</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>The fascination with manipulating the web by adding my own features began.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- <img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
                 <p>Where did it all start?</p>
                 <div class="row">
                     <div class="col-md-2 leftalign">
@@ -94,10 +135,10 @@
                             of my family inspired me to begin a journey of studying and experimenting with Web Development.</p>
                     </div>
                 </div>
+ -->
 
-
-            </div>
         </div>
+    </div>
     </div>
 </body>
 
