--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 
 	<!-- Wrapper-->
 	<div id="wrapper">
-
 		<!-- Nav -->
 		<nav id="nav">
+
 			<nav class="navbar navbar-default navbar-static-top">
+
 				<div class="container">
+					
 					<ul>
 						<li class="padding">
 							<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
@@ -43,20 +45,36 @@
 							<a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
 						</li>
 						<li class="padding">
-							<a href="./contact.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+							<a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
 		</nav>
-		<!--<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="#twitter" class="icon fa-twitter"><span>Twitter</span></a>-->
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
 
-		<!-- Main -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contactme.html">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+			
 		<div id="main">
-
 			<!-- Me -->
 			<article id="me" class="panel headshot one">
 				<header>
@@ -67,9 +85,9 @@
 					<div class="center" id="flip"><i class="fa fa-refresh" aria-hidden="true"></i></div>
 					<!--<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>-->
 				</header>
-				<a href="#work" class="pic">
+				<a class="pic">
 					<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
-					<img class="roundimg" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+					<img class="roundimg padding" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
 				</a>
 			</article>
 			<article class="two">
@@ -135,35 +153,9 @@
 								</section>
 							</article>-->
 
-			<!-- Contact -->
-			<!--<article id="contact" class="panel">
-				<header>
-					<h2>Contact Me</h2>
-				</header>
-				<form action="#" method="post">
-					<div>
-						<div class="row">
-							<div class="6u 12u$(mobile)">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="6u$ 12u$(mobile)">
-								<input type="text" name="email" placeholder="Email" />
-							</div>
-							<div class="12u$">
-								<input type="text" name="subject" placeholder="Subject" />
-							</div>
-							<div class="12u$">
-								<textarea name="message" placeholder="Message" rows="8"></textarea>
-							</div>
-							<div class="12u$">
-								<input type="submit" value="Send Message" />
-							</div>
-						</div>
-					</div>
-				</form>
-			</article>-->
-
 		</div>
+			<br>			
+
 		<!-- Footer -->
 		<div id="footer">
 			<!--<ul class="copyright">
@@ -181,6 +173,7 @@
 	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/app.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script>
 		$('.headshot #flip').on('click', function () {
 			$('.one').hide();
@@ -190,7 +183,7 @@
 			$('.two').hide();
 			$('.one').show().addClass('animated rollIn')
 		})
-	</script>
+</script>
 </body>
 
 </html>
