--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<nav class="navbar navbar-default navbar-static-top">
 
 				<div class="container">
-					
+
 					<ul>
 						<li class="padding">
 							<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
@@ -51,29 +51,29 @@
 				</div>
 			</nav>
 		</nav>
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-        </div>
+				</div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contactme.html">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-			
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="contactme.html">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
 		<div id="main">
 			<!-- Me -->
 			<article id="me" class="panel headshot one">
@@ -154,7 +154,7 @@
 							</article>-->
 
 		</div>
-			<br>			
+		<br>
 
 		<!-- Footer -->
 		<div id="footer">
@@ -173,7 +173,8 @@
 	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/app.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	 crossorigin="anonymous"></script>
 	<script>
 		$('.headshot #flip').on('click', function () {
 			$('.one').hide();
@@ -183,7 +184,8 @@
 			$('.two').hide();
 			$('.one').show().addClass('animated rollIn')
 		})
-</script>
+
+	</script>
 </body>
 
 </html>
