changed navbar, added jumbotron, changed profile page

--- a/index.html
+++ b/index.html
@@ -24,16 +24,11 @@
 </head>
 
 <body>
-
-	<!-- Wrapper-->
-	<div id="wrapper">
-		<!-- Nav -->
+	<div class="jumbotron">
+		<!--Navbar and Hamburger Menu  -->
 		<nav id="nav">
-
 			<nav class="navbar navbar-default navbar-static-top">
-
-				<div class="container">
-
+				<div class="right">
 					<ul>
 						<li class="padding">
 							<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
@@ -53,7 +48,7 @@
 		</nav>
 		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 			<div class="container">
-				<div class="navbar-header">
+				<div class="navbar-header right">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -64,7 +59,7 @@
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
+					<ul class="nav navbar-nav right">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
@@ -73,20 +68,42 @@
 				</div>
 			</div>
 		</nav>
+		<div class="row">
+			<div class="col-md-12">
+				<h1 class="right padding">Hi, I'm Tiffany Hyatt.</h1><br>
+				<h2 class="right padding">Are you as excited as I am to start a project together?</h2>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 center">
+			<h2>Full Stack Web Developer | Music Afficionado</h2><br>
+			<img class="roundimg padding" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+			<h3 class="center"><i>"If I can dream it, then I know it's possible.<br> I believe that the key to seeing a dream
+			to fruition is <br>to first, define the cause/reason behind seeing this dream come alive. <br>Secondly, run your own race without looking back.
+			Last but certainly <br> not least, work harder than you've ever worked before."<br><br>- Tiffany R. Hyatt</i></h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-10 right">
 
+		</div>
+		<div class="col-md-2 right">
+		</div>
+	</div>
+	<!-- Wrapper-->
+	<div id="wrapper">
 		<div id="main">
 			<!-- Me -->
-			<article id="me" class="panel headshot one">
+			<!-- <article id="me" class="panel headshot one">
 				<header>
 					<h1>Tiffany Hyatt</h1>
 					<p>Full Stack Web Developer | Music Afficionado</p>
 					<p id="p2">Latest Projects:<a href="https://github.com/trenette12">&nbsp;Github</a></p>
 					<p id="p3">Email: mail@tiffanyhyatt.com</p>
 					<div class="center" id="flip"><i class="fa fa-refresh" aria-hidden="true"></i></div>
-					<!--<p id="p3"><i class="fa fa-play-circle-o" aria-hidden="true">&nbsp;Now Playing</i></p>-->
 				</header>
 				<a class="pic">
-					<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
 					<img class="roundimg padding" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
 				</a>
 			</article>
@@ -99,7 +116,7 @@
 					<p>Thanks for stopping by!</p>
 					<p id="p2"><a href="mailto:mail@tiffanyhyatt.com">Email Me Your Thoughts/Inquiries</a></p>
 				</header>
-			</article>
+			</article> -->
 
 			<!-- Work -->
 			<!--<article id="work" class="panel">
@@ -184,7 +201,6 @@
 			$('.two').hide();
 			$('.one').show().addClass('animated rollIn')
 		})
-
 	</script>
 </body>
 
