--- a/contactme.html
+++ b/contactme.html
@@ -26,49 +26,57 @@
 <body>
 
     <!-- Nav -->
-    <nav id="nav">
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <ul>
-                    <li class="padding">
-                        <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
-                    </li>
-                    <li class="padding">
-                        <a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="jumbotron">
+        <!--Navbar and Hamburger Menu  -->
+        <nav id="nav">
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="right">
+                    <ul>
+                        <li class="padding">
+                            <a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
+                        </li>
+                        <li class="padding">
+                            <a href="./about.html"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i><br><br>About Me</a>
+                        </li>
+                        <li class="padding">
+                            <a href="./portfolio.html"><i class="fa fa-picture-o fa-lg" aria-hidden="true"></i><br><br>Portfolio</a>
+                        </li>
+                        <li class="padding">
+                            <a href="./contactme.html"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i><br><br>Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </nav>
-    </nav>
-    <br>
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header right">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            </div>
+                </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contactme.html">Contact</a></li>
-                </ul>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav right">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contactme.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="right padding">Hi, I'm Tiffany Hyatt.</h1><br>
+                <h2 class="right padding">Are you as excited as I am to start a project together?</h2>
             </div>
         </div>
-    </nav>
+    </div>
     <!--Body Container-->
     <div class="container">
         <div class="row">
