removed extra padding from index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-10">
-			<h2 class="padding">Full Stack Web Developer | Music Afficionado</h2><br>
+			<h2 class="padding">Web Developer | Music Afficionado</h2><br>
 			<p class="center"><i>"If I can dream it, then I know it's possible. I believe that the key to seeing a dream
 			to fruition is to first, define the cause/reason behind <br>seeing this dream come alive. Secondly, run your own race without looking back.
 			Last but certainly not least, work harder than you've ever worked before."<br><br>- Tiffany Hyatt</i></p>
