--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 	<nav id="nav">
 		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
 			<div class="right">
 				<ul>
 					<li class="padding">
@@ -46,6 +47,7 @@
 					</li>
 				</ul>
 			</div>
+		</div>
 		</nav>
 	</nav>
 	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
