moved profile img to jumbotron

--- a/index.html
+++ b/index.html
@@ -74,27 +74,18 @@
 
 		<div class="row">
 			<div class="col-md-12">
+					<div class="padding right">
+							<img class="roundimg padding right" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+						</div>
 				<h1 class="right padding">Hi, I'm Tiffany Hyatt.</h1><br>
-				<h2 class="right padding">Are you as excited as I am to start a project together?</h2>
+				<h2 class="right padding">Web Developer | Music Afficionado</h2>
 			</div>
 
 		</div>
 	</div>
+		<!-- About Me Section -->
+<div class="whitefont" id="mainthree">
 	<div class="row">
-		<div class="col-md-10">
-			<h2 class="padding">Web Developer | Music Afficionado</h2><br>
-			<p class="center"><i>"If I can dream it, then I know it's possible. I believe that the key to seeing a dream
-			to fruition is to first, define the cause/reason behind <br>seeing this dream come alive. Secondly, run your own race without looking back.
-			Last but certainly not least, work harder than you've ever worked before."<br><br>- Tiffany Hyatt</i></p>
-		</div>
-		<div class="col-md-2 right">
-			<img class="roundimg padding" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
-		</div>
-	</div>
-
-	<!-- About Me Section -->
-	<div class="whitefont" id="mainthree">
-		<div class="row">
 			<div class="col-md-12">
 				<h2 class="padding whitefont" id="aboutme">About Me</h2><br>
 			</div>
@@ -108,8 +99,15 @@
 
 			</div>
 		</div><br>
-
+	<div class="row">
+		<div class="col-md-12">
+			<p class="center"><i>"If I can dream it, then I know it's possible. I believe that the key to seeing a dream
+			to fruition is to first, define the cause/reason behind <br>seeing this dream come alive. Secondly, run your own race without looking back.
+			Last but certainly not least, work harder than you've ever worked before."<br><br>- Tiffany Hyatt</i></p>
+		</div>
 	</div>
+</div>
+
 	<!-- Portfolio -->
 	<div class="row">
 		<div class="col-md-12">
