added color changer for background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Tiffany Hyatt</title>
+	<title>Tiffany Hyatt - Welcome</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -15,8 +15,7 @@
 	 crossorigin="anonymous">
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/main2.css" />
-
+	<link rel="stylesheet" href="assets/css/main2.css" />
 	<script src="https://use.fontawesome.com/70db594f55.js"></script>
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -25,12 +24,15 @@
 </head>
 
 <body>
-
 	<!--Navbar and Hamburger Menu  -->
-
 	<nav id="nav">
 		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="center whitefont controls">
+				<label for="background">What's your favorite color?</label>
+				<input type="color" value="#ffffff" name="background">
+			</div>
 			<div class="right">
+
 				<ul>
 					<li class="padding">
 						<a href="./index.html"><i class="fa fa-home fa-lg" aria-hidden="true"></i><br><br>Home</a>
@@ -74,25 +76,25 @@
 
 		<div class="row">
 			<div class="col-md-12">
-					<div class="padding right">
-							<img class="roundimg padding right" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
-						</div>
+				<div class="padding right">
+					<img class="roundimg padding right" src="images/profile.png" alt="Picture of Tiffany Hyatt" />
+				</div>
 				<h1 class="right padding">Hi, I'm Tiffany Hyatt.</h1><br>
 				<h2 class="right padding">Web Developer | Music Afficionado</h2>
 			</div>
 
 		</div>
 	</div>
-		<!-- About Me Section -->
-		<div class="row">
-				<div class="col-md-12">
-					<p class="center"><i>"If I can dream it, then I know it's possible. I believe that the key to seeing a dream
+	<!-- About Me Section -->
+	<div class="row">
+		<div class="col-md-12">
+			<p class="center"><i>"If I can dream it, then I know it's possible. I believe that the key to seeing a dream
 					to fruition is to first, define the cause/reason behind <br>seeing this dream come alive. Secondly, run your own race without looking back.
 					Last but certainly not least, work harder than you've ever worked before."<br><br>- Tiffany Hyatt</i></p>
-				</div>
-			</div>
-<div class="whitefont" id="mainthree">
-	<div class="row">
+		</div>
+	</div>
+	<div class="whitefont" id="mainthree">
+		<div class="row">
 			<div class="col-md-12">
 				<h2 class="padding whitefont" id="aboutme">About Me</h2><br>
 			</div>
@@ -106,7 +108,7 @@
 
 			</div>
 		</div><br>
-</div>
+	</div>
 
 	<!-- Portfolio -->
 	<div class="row">
